Add Bottom Navigation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="bottom_navigation_background">#ffffffff</color>
+    <color name="bottom_navigation_sun">#FDFF51</color>
+    <color name="white">#ffffff</color>
 </resources>
