--- a/app/src/main/res/layout/badge_main_bottom.xml
+++ b/app/src/main/res/layout/badge_main_bottom.xml
@@ -2,18 +2,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/text_badge_main"
+
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_gravity="top|end"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/bg_badge_main"
+        android:layout_marginEnd="15dp"
         android:gravity="center"
         android:minWidth="20dp"
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
-        android:textColor="@color/white"
-        android:textSize="12sp" />
+        app:srcCompat="@mipmap/icon_sunny" />
+
 </merge>
