--- a/app/src/main/res/layout/badge_main_bottom_notselected.xml
+++ b/app/src/main/res/layout/badge_main_bottom_notselected.xml
@@ -4,11 +4,11 @@
 
     <TextView
         android:id="@+id/text_badge_main"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_gravity="top|end"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="17dp"
         android:background="@drawable/bg_badge_main_notselected"
         android:gravity="center"
         android:minWidth="20dp"
