Connect google map API and touch map can add maker & polyline Add autocompleteSupportFragment to show somewhere when user selecte

--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,4 +13,23 @@
         android:text="Trip"
         tools:layout_editor_absoluteX="176dp"
         tools:layout_editor_absoluteY="272dp" />
+
+    <fragment
+    android:name="com.google.android.gms.maps.SupportMapFragment"
+    android:id="@+id/fragment_map"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
+
+    <fragment
+        android:id="@+id/place_autocomplete"
+        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
