--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -52,13 +52,23 @@
         android:id="@+id/recycler_trip_content_icon"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
         android:layout_marginBottom="60dp"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toStartOf="@+id/image_add_point"
         app:layout_constraintStart_toStartOf="parent">
 
     </android.support.v7.widget.RecyclerView>
+
+    <ImageView
+        android:id="@+id/image_add_point"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/recycler_trip_content_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/recycler_trip_content_icon"
+        app:srcCompat="@mipmap/icon_plus" />
 
 </android.support.constraint.ConstraintLayout>
