--- a/app/src/main/res/layout/item_trip_content.xml
+++ b/app/src/main/res/layout/item_trip_content.xml
@@ -67,10 +67,10 @@
             android:id="@+id/text_trip_content_describe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="60dp"
             android:layout_marginTop="8dp"
             android:text="TextView"
-            app:layout_constraintStart_toEndOf="@+id/text_trip_content_title"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_trip_content_title" />
 
     </android.support.constraint.ConstraintLayout>
