--- a/app/src/main/res/layout/item_trip_content_icon.xml
+++ b/app/src/main/res/layout/item_trip_content_icon.xml
@@ -7,29 +7,28 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/text_trip_icon_roadtime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
-        android:text="TextView"
-        android:textSize="4sp"
+        android:textSize="8sp"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintStart_toStartOf="@+id/view" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/text_trip_icon_pointime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="TextView"
-        android:textSize="4sp"
+        android:textSize="8sp"
         app:layout_constraintBottom_toTopOf="@+id/image_trip_content_icon"
         app:layout_constraintEnd_toEndOf="@+id/image_trip_content_icon"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toEndOf="@+id/text_trip_icon_roadtime"
         app:layout_constraintStart_toStartOf="@+id/image_trip_content_icon"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -47,6 +46,7 @@
         android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="1dp"
+        android:layout_marginEnd="2dp"
         android:background="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="@+id/image_trip_content_icon"
         app:layout_constraintEnd_toStartOf="@+id/image_trip_content_icon"
