--- a/app/src/main/res/drawable-v24/icon_circle.xml
+++ b/app/src/main/res/drawable-v24/icon_circle.xml
@@ -4,5 +4,5 @@
     <solid android:color="@color/white" />
     <stroke
         android:width="1dp"
-        android:color="#3f3a3a" />
+        android:color="#66969591" />
 </shape>
