--- a/app/src/main/res/layout/item_trip_content_icon.xml
+++ b/app/src/main/res/layout/item_trip_content_icon.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
-        android:textSize="8sp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintStart_toStartOf="@+id/view" />
@@ -22,35 +22,47 @@
         android:id="@+id/text_trip_icon_pointime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="TextView"
-        android:textSize="8sp"
-        app:layout_constraintBottom_toTopOf="@+id/image_trip_content_icon"
-        app:layout_constraintEnd_toEndOf="@+id/image_trip_content_icon"
-        app:layout_constraintStart_toEndOf="@+id/text_trip_icon_roadtime"
-        app:layout_constraintStart_toStartOf="@+id/image_trip_content_icon"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/image_trip_content_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/icon_plus" />
+        android:layout_marginBottom="2dp"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/constraint_icon"
+        app:layout_constraintEnd_toEndOf="@+id/constraint_icon"
+        app:layout_constraintStart_toStartOf="@+id/constraint_icon" />
 
     <View
         android:id="@+id/view"
-        android:layout_width="0dp"
+        android:layout_width="30dp"
         android:layout_height="1dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@+id/image_trip_content_icon"
-        app:layout_constraintEnd_toStartOf="@+id/image_trip_content_icon"
+        app:layout_constraintBottom_toBottomOf="@+id/constraint_icon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/image_trip_content_icon" />
+        app:layout_constraintTop_toBottomOf="@+id/text_trip_icon_pointime" />
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraint_icon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/corner_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/view"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/image_trip_content_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@mipmap/icon_plus" />
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
