--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="bottom_navigation_background">#ffffffff</color>
     <color name="bottom_navigation_sun">#FDFF51</color>
     <color name="white">#ffffff</color>
+    <color name="translucent_40">#66000000</color>
 </resources>
