--- a/app/src/main/res/layout/fragment_addordeletepoint.xml
+++ b/app/src/main/res/layout/fragment_addordeletepoint.xml
@@ -2,58 +2,140 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#00000000"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-    <!--<com.polyak.iconswitch.IconSwitch-->
-    <!--android:id="@+id/icon_switch"-->
-    <!--android:layout_width="50dp"-->
-    <!--android:layout_height="50dp"-->
-    <!--android:layout_marginStart="8dp"-->
-    <!--android:layout_marginTop="8dp"-->
-    <!--android:layout_marginEnd="8dp"-->
-    <!--app:isw_active_tint_icon_left="#fff"-->
-    <!--app:isw_active_tint_icon_right="#fff"-->
-    <!--app:isw_background_color="#fff"-->
-
-    <!--app:isw_default_selection="left"-->
-    <!--app:isw_icon_left="@mipmap/icon_plus"-->
-    <!--app:isw_icon_right="@mipmap/icon_plus"-->
-    <!--app:isw_icon_size="20dp"-->
-    <!--app:isw_inactive_tint_icon_left="#fff"-->
-    <!--app:isw_inactive_tint_icon_right="#fff"-->
-    <!--app:isw_thumb_color_left="#fff"-->
-
-    <!--app:isw_thumb_color_right="#fff"-->
-    <!--app:layout_constraintEnd_toEndOf="parent"-->
-    <!--app:layout_constraintStart_toStartOf="parent"-->
-    <!--app:layout_constraintTop_toTopOf="parent" />-->
+    android:layout_height="wrap_content">
 
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:background="@color/common_google_signin_btn_text_light_pressed"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <ImageButton
-            android:id="@+id/imageButton"
+        <TextView
+            android:id="@+id/text_point_place"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
+            android:text="地點 : "
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/text_point_note"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:text="筆記 : "
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_point_place" />
+
+        <TextView
+            android:id="@+id/text_point_cost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:text="預計花費 : "
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_point_note" />
+
+        <TextView
+            android:id="@+id/text_point_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:text="地點類型 : "
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_point_cost" />
+
+        <TextView
+            android:id="@+id/text_point_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:text="預計到達時間 : "
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_point_type" />
+
+        <EditText
+            android:id="@+id/edit_point_cost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:ems="10"
+            android:inputType="numberSigned"
+            app:layout_constraintBottom_toBottomOf="@+id/text_point_cost"
+            app:layout_constraintStart_toEndOf="@+id/text_point_cost"
+            app:layout_constraintTop_toTopOf="@+id/text_point_cost" />
+
+        <EditText
+            android:id="@+id/edit_point_note"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:ems="10"
+            android:inputType="numberSigned|textEmailAddress"
+            app:layout_constraintBottom_toBottomOf="@+id/text_point_note"
+            app:layout_constraintStart_toEndOf="@+id/text_point_note"
+            app:layout_constraintTop_toTopOf="@+id/text_point_note"
+            app:layout_constraintVertical_bias="0.653" />
+
+        <EditText
+            android:id="@+id/edit_point_place"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:ems="10"
+            android:inputType="textEmailAddress"
+            app:layout_constraintBottom_toBottomOf="@+id/text_point_place"
+            app:layout_constraintStart_toEndOf="@+id/text_point_place"
+            app:layout_constraintTop_toTopOf="@+id/text_point_place"
+            app:layout_constraintVertical_bias="0.653" />
+
+        <Spinner
+            android:id="@+id/spinner_point_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:entries="@array/icon_type_list"
+            android:spinnerMode="dialog"
+            app:layout_constraintBottom_toBottomOf="@+id/text_point_type"
+            app:layout_constraintStart_toEndOf="@+id/text_point_type"
+            app:layout_constraintTop_toTopOf="@+id/text_point_type" />
+
+        <Spinner
+            android:id="@+id/spinner_point_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:entries="@array/icon_day_list"
+            android:spinnerMode="dialog"
+            app:layout_constraintBottom_toBottomOf="@+id/text_point_time"
+            app:layout_constraintStart_toEndOf="@+id/text_point_time"
+            app:layout_constraintTop_toTopOf="@+id/text_point_time"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <Button
+            android:id="@+id/button_point_check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:text="確認"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.694"
-            app:srcCompat="@mipmap/icon_camera" />
+            app:layout_constraintTop_toBottomOf="@+id/text_point_time" />
+
+
     </android.support.constraint.ConstraintLayout>
 
 
