--- a/app/src/main/res/layout/item_trip_content.xml
+++ b/app/src/main/res/layout/item_trip_content.xml
@@ -52,7 +52,8 @@
         android:layout_marginBottom="4dp"
         android:paddingLeft="13dp"
         android:paddingRight="13dp"
-        android:paddingBottom="5dp"
+        android:paddingBottom="3dp"
+        android:paddingTop="2dp"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
