--- a/app/src/main/res/layout/item_trip_content_icon.xml
+++ b/app/src/main/res/layout/item_trip_content_icon.xml
@@ -14,6 +14,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
         android:textSize="12sp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintStart_toStartOf="@+id/view" />
