--- a/app/src/main/res/drawable-v24/corner_home_color.xml
+++ b/app/src/main/res/drawable-v24/corner_home_color.xml
@@ -2,8 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:topRightRadius="15dp"
-        android:bottomRightRadius="15dp"/>
+    <corners android:radius="15dp"/>
     <!--&lt;!&ndash; 圆角，你也可以对不同的角设置不同的数值 &ndash;&gt;-->
 
     <!--<solid android:color="#FFFFFF" />-->
