show all trip in home fragment load data to trip fragment check is owner or not first

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
     </style>
 
     <style name="Dialog">
-        <item name="android:windowBackground">@color/translucent_40</item>
+        <item name="android:windowBackground">@color/white</item>
     </style>
 
 
