--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -19,29 +19,40 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-    <View
-        android:id="@+id/view2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/corner_search_color"
-        app:layout_constraintBottom_toBottomOf="@+id/place_autocomplete"
-        app:layout_constraintEnd_toEndOf="@+id/place_autocomplete"
-        app:layout_constraintStart_toStartOf="@+id/place_autocomplete"
-        app:layout_constraintTop_toTopOf="@+id/place_autocomplete" />
-
-    <fragment
-        android:id="@+id/place_autocomplete"
-        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraint_trip_search"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="50dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <View
+            android:id="@+id/view2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/corner_search_color"
+            app:layout_constraintBottom_toBottomOf="@+id/place_autocomplete"
+            app:layout_constraintEnd_toEndOf="@+id/place_autocomplete"
+            app:layout_constraintStart_toStartOf="@+id/place_autocomplete"
+            app:layout_constraintTop_toTopOf="@+id/place_autocomplete" />
+
+        <fragment
+            android:id="@+id/place_autocomplete"
+            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
 
     <ImageButton
         android:id="@+id/imageButton_trip_friend"
@@ -49,9 +60,10 @@
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/icon_circle"
-        app:layout_constraintBottom_toBottomOf="@+id/place_autocomplete"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/constraint_trip_search"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/place_autocomplete"
+        app:layout_constraintTop_toTopOf="@+id/constraint_trip_search"
         app:srcCompat="@mipmap/icon_high_five" />
 
     <ImageView
@@ -65,6 +77,7 @@
         android:paddingTop="8dp"
         android:paddingRight="8dp"
         android:paddingBottom="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/fragment_map"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@mipmap/icon_refresh" />
